--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^5.11.15",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "ngx-toastr": "^13.2.1",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
