--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.1.0",
     "@angular/platform-browser-dynamic": "~11.1.0",
     "@angular/router": "~11.1.0",
+    "animate.css": "^4.1.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.25.1",
     "dotenv": "^8.2.0",
